--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8726,205 +8726,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #e1808a; }
+  background: #878177; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #d97212; }
+  background: #929ac2; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #1b92c5; }
+  background: #a682d6; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #ee3358; }
+  background: #680826; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #8cfd79; }
+  background: #7c5f89; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #584dc9; }
+  background: #ba5920; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #11364f; }
+  background: #570a41; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #f15dd0; }
+  background: #e1fd0e; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #e58a33; }
+  background: #e511fb; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #4751d4; }
+  background: #19add1; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #c95f8f; }
+  background: #8cb144; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #c7edcc; }
+  background: #da14e3; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #168d6f; }
+  background: #12459f; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #0db596; }
+  background: #289626; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #bc8397; }
+  background: #7193f9; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #897d97; }
+  background: #918b9e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #aff648; }
+  background: #2a35d6; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #521382; }
+  background: #2470f7; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #bb4f03; }
+  background: #7ccf0b; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #989bdc; }
+  background: #030e09; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #71d60a; }
+  background: #1559b2; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #62330a; }
+  background: #316851; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #c2372f; }
+  background: #1b3216; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #1ba266; }
+  background: #d2e0b0; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #d7a8df; }
+  background: #224096; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #7dd21a; }
+  background: #8c85d5; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #3d35ca; }
+  background: #d8194e; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #145940; }
+  background: #b01d52; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #cce741; }
+  background: #d09dac; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #692694; }
+  background: #923632; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #a2290a; }
+  background: #a0f6d9; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #6f86b8; }
+  background: #cdda5e; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #269b2e; }
+  background: #64bf3e; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d47ae5; }
+  background: #a29621; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #8554da; }
+  background: #c4d576; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #37336a; }
+  background: #414622; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #8e8be2; }
+  background: #810774; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ac302a; }
+  background: #482293; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #058419; }
+  background: #f8d71d; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #76c48a; }
+  background: #9bfb61; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #770733; }
+  background: #0d28c6; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #d9f04f; }
+  background: #115c39; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #6afc6e; }
+  background: #46c541; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #b33463; }
+  background: #34b72d; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #1c7811; }
+  background: #22665d; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #3baf0f; }
+  background: #b3f00b; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #52157f; }
+  background: #af33c0; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #700c88; }
+  background: #e26449; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #34377d; }
+  background: #79f58d; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #a7615b; }
+  background: #804fbe; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #a611f2; }
+  background: #47f062; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #aaf709; }
+  background: #958ed2; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #833bec; }
+  background: #1e7552; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #9679dd; }
+  background: #792990; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #95e528; }
+  background: #49110c; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #963a4b; }
+  background: #631394; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #16194f; }
+  background: #47ced3; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #5328ca; }
+  background: #36e710; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #1ecb8d; }
+  background: #e885cf; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #abbceb; }
+  background: #d6fc0d; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #796f1b; }
+  background: #3749e3; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #8f92bb; }
+  background: #e765c4; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #891b33; }
+  background: #e78b46; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #71657e; }
+  background: #a65f02; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #baeee2; }
+  background: #332f42; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #fcfe94; }
+  background: #68096d; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #02e557; }
+  background: #13d11b; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #2fdc82; }
+  background: #22dc1d; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #239dd4; }
+  background: #355b20; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #14ba03; }
+  background: #1c0398; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #a09eb9; }
+  background: #259cde; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #6fb1e2; }
+  background: #888def; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #46e12a; }
+  background: #554163; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #b6e250; }
+  background: #d7f323; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #5ee7f4; }
+  background: #0b48a1; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #7670b4; }
+  background: #dbd254; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #dd19ab; }
+  background: #c442ff; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #8e1291; }
+  background: #e413bb; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #7ebaa7; }
+  background: #9e8570; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #9f6507; }
+  background: #0565ac; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #8f68f3; }
+  background: #8761ab; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #4fe572; }
+  background: #039a30; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #309821; }
+  background: #7da71e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c2affa; }
+  background: #e7e2e7; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #fb505d; }
+  background: #be9aa9; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #8a4ecb; }
+  background: #1b7966; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #b08b2d; }
+  background: #69bafc; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #cdb07d; }
+  background: #433991; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #35c3e9; }
+  background: #a37a88; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #c04135; }
+  background: #d6a834; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #1c110a; }
+  background: #fed7f2; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #031118; }
+  background: #2fdfae; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #94fcef; }
+  background: #aa1ead; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #1915f0; }
+  background: #838519; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #7874e0; }
+  background: #3a455c; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #69682e; }
+  background: #b2b158; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #dde731; }
+  background: #40e706; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #4d8817; }
+  background: #b2e12f; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #e58bdc; }
+  background: #6db0aa; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #c35011; }
+  background: #1e9503; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14948,7 +14948,7 @@ table .parent-row,
       -webkit-appearance: none !important;
       -moz-appearance: none !important;
       appearance: none !important;
-      background-image: url(../images/select-dropdwon-icon.png);
+      background-image: url(../images/down-arrow.svg);
       background-repeat: no-repeat;
       background-position-x: 94%;
       background-position-y: 18px;
@@ -15141,8 +15141,8 @@ li:hover {
 
 .sliding-left-section .tab-content {
   position: absolute;
-  top: 120px;
-  left: 100px;
+  top: 100px;
+  left: 20px;
   z-index: 8;
   width: 68vw;
   padding: 20px;
@@ -15164,7 +15164,7 @@ li:hover {
     left: 232px;
     z-index: 8;
     width: 68vw;
-    padding: 20px; }
+    padding: 0px; }
     .slid-screen-wrapper .sliding-left-section .tab-content .activea {
       box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.19);
       border-radius: 6px;
