--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2696,7 +2696,7 @@ table .parent-row,
       -webkit-appearance: none !important;
       -moz-appearance: none !important;
       appearance: none !important;
-      background-image: url(../images/select-dropdwon-icon.png);
+      background-image: url(../images/down-arrow.svg);
       background-repeat: no-repeat;
       background-position-x: 94%;
       background-position-y: 18px;
@@ -2979,8 +2979,8 @@ table .parent-row,
 
 .sliding-left-section .tab-content {
   position: absolute;
-  top: 120px;
-  left: 100px;
+  top: 100px;
+  left: 20px;
   z-index: 8;
   width: 68vw;
   padding: 20px;
@@ -3005,8 +3005,7 @@ table .parent-row,
       left: 232px;
       z-index: 8;
       width: 68vw;
-
-      padding: 20px;
+      padding: 0px;
 
       .activea {
         box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.19);
