--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8726,205 +8726,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #878177; }
+  background: #416faf; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #929ac2; }
+  background: #5c9a7b; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #a682d6; }
+  background: #d98e49; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #680826; }
+  background: #ebe582; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #7c5f89; }
+  background: #67dca5; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #ba5920; }
+  background: #df90dc; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #570a41; }
+  background: #a80d84; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #e1fd0e; }
+  background: #5b0c02; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #e511fb; }
+  background: #de02fa; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #19add1; }
+  background: #b38ff4; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #8cb144; }
+  background: #8ba7a6; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #da14e3; }
+  background: #c165f7; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #12459f; }
+  background: #7310ec; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #289626; }
+  background: #39b91a; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #7193f9; }
+  background: #6e6e9e; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #918b9e; }
+  background: #b3cb3e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #2a35d6; }
+  background: #1db00b; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #2470f7; }
+  background: #2566b9; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #7ccf0b; }
+  background: #bc776e; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #030e09; }
+  background: #5184e6; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #1559b2; }
+  background: #201e06; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #316851; }
+  background: #550604; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #1b3216; }
+  background: #34fa36; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #d2e0b0; }
+  background: #71090f; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #224096; }
+  background: #133bac; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #8c85d5; }
+  background: #e0c62c; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #d8194e; }
+  background: #9967ee; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b01d52; }
+  background: #fecf47; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #d09dac; }
+  background: #98d58e; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #923632; }
+  background: #e0021a; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #a0f6d9; }
+  background: #b6a43e; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #cdda5e; }
+  background: #434635; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #64bf3e; }
+  background: #582da9; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #a29621; }
+  background: #11134b; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #c4d576; }
+  background: #26848b; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #414622; }
+  background: #42f102; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #810774; }
+  background: #f6d5c2; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #482293; }
+  background: #fa90bb; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #f8d71d; }
+  background: #99f4d6; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #9bfb61; }
+  background: #5c5ab6; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #0d28c6; }
+  background: #c9fd24; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #115c39; }
+  background: #c7224f; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #46c541; }
+  background: #9b9088; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #34b72d; }
+  background: #1cafc2; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #22665d; }
+  background: #2d463a; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b3f00b; }
+  background: #29abd1; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #af33c0; }
+  background: #d47b9d; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #e26449; }
+  background: #dc57b7; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #79f58d; }
+  background: #4299d0; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #804fbe; }
+  background: #39011a; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #47f062; }
+  background: #cf2335; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #958ed2; }
+  background: #e154b7; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #1e7552; }
+  background: #068ef7; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #792990; }
+  background: #9908be; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #49110c; }
+  background: #28a26a; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #631394; }
+  background: #7a6aba; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #47ced3; }
+  background: #60fefd; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #36e710; }
+  background: #a83424; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #e885cf; }
+  background: #12d98d; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #d6fc0d; }
+  background: #84cbf1; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #3749e3; }
+  background: #dd8716; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #e765c4; }
+  background: #f10991; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #e78b46; }
+  background: #98c943; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #a65f02; }
+  background: #7bc896; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #332f42; }
+  background: #e0ca6a; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #68096d; }
+  background: #df6b81; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #13d11b; }
+  background: #cd950b; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #22dc1d; }
+  background: #295566; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #355b20; }
+  background: #a87382; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #1c0398; }
+  background: #445ad9; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #259cde; }
+  background: #329aa1; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #888def; }
+  background: #f5449d; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #554163; }
+  background: #3c048e; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #d7f323; }
+  background: #88549a; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #0b48a1; }
+  background: #fa5601; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #dbd254; }
+  background: #e51631; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #c442ff; }
+  background: #034060; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #e413bb; }
+  background: #49416d; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #9e8570; }
+  background: #031ecf; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #0565ac; }
+  background: #33f635; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #8761ab; }
+  background: #aa8f10; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #039a30; }
+  background: #77e7e8; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #7da71e; }
+  background: #51b072; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #e7e2e7; }
+  background: #5edc7f; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #be9aa9; }
+  background: #730cbe; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #1b7966; }
+  background: #10a95d; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #69bafc; }
+  background: #89f0eb; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #433991; }
+  background: #136a82; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #a37a88; }
+  background: #b904cc; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #d6a834; }
+  background: #4621f0; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #fed7f2; }
+  background: #895ed7; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #2fdfae; }
+  background: #d30413; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #aa1ead; }
+  background: #74419d; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #838519; }
+  background: #05b20c; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #3a455c; }
+  background: #4a7ce8; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #b2b158; }
+  background: #d842c1; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #40e706; }
+  background: #c303de; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #b2e12f; }
+  background: #3ebcaf; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #6db0aa; }
+  background: #2f42e1; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #1e9503; }
+  background: #f9ffd6; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -15141,7 +15141,7 @@ li:hover {
 
 .sliding-left-section .tab-content {
   position: absolute;
-  top: 100px;
+  top: 56px;
   left: 20px;
   z-index: 8;
   width: 68vw;
@@ -15160,7 +15160,7 @@ li:hover {
   z-index: 5; }
   .slid-screen-wrapper .sliding-left-section .tab-content {
     position: absolute;
-    top: 120px;
+    top: 76px;
     left: 232px;
     z-index: 8;
     width: 68vw;
@@ -15394,7 +15394,6 @@ option {
 .right-section-overlay {
   position: relative; }
   .right-section-overlay:after {
-    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -15920,6 +15919,50 @@ option {
 
 .summary-details-row .eyes-icon-password input[type="checkbox"]:checked + label {
   background-image: url(../images/eye-show-icon-line.svg); }
+
+.assets-inventory-title-div {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  align-items: center; }
+  .assets-inventory-title-div div {
+    text-align: right;
+    padding-right: 32px; }
+
+.query-icon {
+  margin-left: 12px; }
+
+.assets-inventory-wrapper .tabs-aggre a.active {
+  background: #fff;
+  border: 1px solid #c4c4c4 !important; }
+.assets-inventory-wrapper .tabs-aggre button {
+  padding: 15px 12px !important;
+  display: flex; }
+  .assets-inventory-wrapper .tabs-aggre button::after {
+    top: 18px !important; }
+  .assets-inventory-wrapper .tabs-aggre button .filter-icon-group {
+    margin-right: 12px !important; }
+.assets-inventory-wrapper .tabs-aggre .active {
+  background: #fff;
+  position: relative;
+  border: 1px solid #c4c4c4; }
+  .assets-inventory-wrapper .tabs-aggre .active::before {
+    width: 50px;
+    height: 100%;
+    background: #fff;
+    position: absolute;
+    top: 0px;
+    right: -10px;
+    content: "";
+    z-index: 99; }
+.assets-inventory-wrapper .tabs-aggre .card-body {
+  padding: 0px !important; }
+  .assets-inventory-wrapper .tabs-aggre .card-body ul li {
+    margin: 15px 0px; }
+    .assets-inventory-wrapper .tabs-aggre .card-body ul li a {
+      padding: 15px 12px 15px 42px !important; }
+  .assets-inventory-wrapper .tabs-aggre .card-body .active-tab-side-submenu {
+    border-radius: 0px !important; }
 
 @media screen and (max-width: 767px) {
   .four-dropdwon-div {
