--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8726,205 +8726,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #416faf; }
+  background: #92bcf2; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #5c9a7b; }
+  background: #861520; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #d98e49; }
+  background: #80a234; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #ebe582; }
+  background: #8aef41; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #67dca5; }
+  background: #77573f; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #df90dc; }
+  background: #0a5c20; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #a80d84; }
+  background: #a7c036; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #5b0c02; }
+  background: #ed1c54; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #de02fa; }
+  background: #da80a6; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #b38ff4; }
+  background: #9e31e5; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #8ba7a6; }
+  background: #84da3f; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #c165f7; }
+  background: #e46caa; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #7310ec; }
+  background: #f0464c; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #39b91a; }
+  background: #ba853b; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #6e6e9e; }
+  background: #c5e01a; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #b3cb3e; }
+  background: #a7e5bb; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #1db00b; }
+  background: #f8e290; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #2566b9; }
+  background: #f34a4f; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #bc776e; }
+  background: #6fe2a9; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #5184e6; }
+  background: #77884f; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #201e06; }
+  background: #e13343; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #550604; }
+  background: #0a1c08; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #34fa36; }
+  background: #399064; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #71090f; }
+  background: #07347b; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #133bac; }
+  background: #b7414e; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #e0c62c; }
+  background: #890c94; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #9967ee; }
+  background: #a52397; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #fecf47; }
+  background: #1eb24b; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #98d58e; }
+  background: #8bd68a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #e0021a; }
+  background: #19932e; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #b6a43e; }
+  background: #871df2; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #434635; }
+  background: #5dc3a1; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #582da9; }
+  background: #5509f7; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #11134b; }
+  background: #402283; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #26848b; }
+  background: #4a4dfe; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #42f102; }
+  background: #95a8a4; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #f6d5c2; }
+  background: #ec9a14; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #fa90bb; }
+  background: #c67992; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #99f4d6; }
+  background: #15b58b; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #5c5ab6; }
+  background: #dccf69; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #c9fd24; }
+  background: #531fa4; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #c7224f; }
+  background: #67c148; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #9b9088; }
+  background: #d053ed; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #1cafc2; }
+  background: #8f4f12; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #2d463a; }
+  background: #cf8997; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #29abd1; }
+  background: #6089c9; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d47b9d; }
+  background: #1e34e5; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #dc57b7; }
+  background: #34633b; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #4299d0; }
+  background: #9e49bc; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #39011a; }
+  background: #f3e472; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #cf2335; }
+  background: #ecc802; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #e154b7; }
+  background: #b1916e; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #068ef7; }
+  background: #cb8eda; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #9908be; }
+  background: #ce3bbc; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #28a26a; }
+  background: #d7b8c2; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #7a6aba; }
+  background: #dc64d0; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #60fefd; }
+  background: #5388a0; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #a83424; }
+  background: #64f807; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #12d98d; }
+  background: #4c60c7; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #84cbf1; }
+  background: #b1f8db; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #dd8716; }
+  background: #3f62da; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #f10991; }
+  background: #70690c; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #98c943; }
+  background: #0acb11; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #7bc896; }
+  background: #d5fa81; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #e0ca6a; }
+  background: #76ff81; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #df6b81; }
+  background: #6bc635; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #cd950b; }
+  background: #b6fe7a; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #295566; }
+  background: #77e1c7; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #a87382; }
+  background: #5e8a16; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #445ad9; }
+  background: #7bb17a; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #329aa1; }
+  background: #9f4aef; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #f5449d; }
+  background: #b03557; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #3c048e; }
+  background: #05c547; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #88549a; }
+  background: #7b6e52; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #fa5601; }
+  background: #76f047; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #e51631; }
+  background: #451509; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #034060; }
+  background: #ac8e01; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #49416d; }
+  background: #c759cb; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #031ecf; }
+  background: #21b7e3; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #33f635; }
+  background: #4718b5; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #aa8f10; }
+  background: #1ca955; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #77e7e8; }
+  background: #8656a0; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #51b072; }
+  background: #031e3c; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #5edc7f; }
+  background: #972327; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #730cbe; }
+  background: #a40da4; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #10a95d; }
+  background: #45d06b; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #89f0eb; }
+  background: #aa969c; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #136a82; }
+  background: #e8eb90; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #b904cc; }
+  background: #9dbe74; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #4621f0; }
+  background: #5ccb4a; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #895ed7; }
+  background: #c11abf; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #d30413; }
+  background: #64ac3e; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #74419d; }
+  background: #421433; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #05b20c; }
+  background: #f3d334; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #4a7ce8; }
+  background: #a1dd15; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #d842c1; }
+  background: #a19bd0; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #c303de; }
+  background: #b03908; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #3ebcaf; }
+  background: #f00c9b; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #2f42e1; }
+  background: #0f7760; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #f9ffd6; }
+  background: #779d19; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
